[project]
name = "init-data-py"
version = "1.0.0"
description = "A Python library that provides tools for using and validating Telegram web app init data."
authors = [
    { name = "nimaxin", email = "nimaxin@proton.me" }
]
dependencies = [
    "cryptography>=43.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.11.1",
    "tox>=4.17.1",
    "ruff>=0.5.7",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/init_data_py"]

[tool.rye.scripts]
tests = "pytest"

[tool.ruff.format]
quote-style = "double"
